--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,7 @@
 Version 0.6.1 -
 
 - Give more time to pipe process to terminate after having sent a SIGINT.
+- Remove custom sighandler code.
 
 Version 0.6.0 - March 6, 2014
 
