Update README with
webcam overlay video URL.

Signed-off-by: Olivier Langlois <olivier@trillion01.com>

--- a/README
+++ b/README
@@ -26,6 +26,9 @@ non-portable and this is an assumed decision.
 Here is my first 1080P real-time capture on Youtube:
 http://youtu.be/EYYeIefOgq0
 
+Here is a 6 Mbps 1080P with libx264 veryfast preset having a webcam overlay + audio commentary
+http://youtu.be/jVBYTrcC21Q
+
 glc-capture:
 ------------
 
