Add GLC_PIPE_DELAY param
http://ffmpeg.org/pipermail/ffmpeg-devel/2014-March/155704.html

A webcam video initialization can take ~280-300ms. This may induce
synch issue between audio video. It is possible to configure a delay
between the time where the pipe reader process is created and the time
where the first frame is written to the pipe to address this issue.

Signed-off-by: Olivier Langlois <olivier@trillion01.com>

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,8 @@
+Version 0.6.2
+
+- Add the option to delay the writting of the frames in the pipe after having
+  created the pipe reader process.
+
 Version 0.6.1 - March 19, 2014
 
 - Webcam overlay + audio streams mix
