Only unset LD_PRELOAD for pipe child process
This has caused regression where some applications fork a child to do
the actual OpenGL rendering. For these it is important to not unset
LD_PRELOAD at the very beginning or else capturing will not work.

Signed-off-by: Olivier Langlois <olivier@trillion01.com>

--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,7 @@
 Version 0.6.3 -
 - Initialized to NULL a pointer (https://github.com/lano1106/glcs/issues/12)
+- Fix regression where some application fork a child where the actual opengl rendering happens
+  (https://github.com/lano1106/glcs/issues/11)
 
 Version 0.6.2 - May 08, 2014
 
