--- a/NEWS
+++ b/NEWS
@@ -1,7 +1,8 @@
-Version 0.6.3 -
+Version 0.6.3 - June 19, 2014
 - Initialized to NULL a pointer (https://github.com/lano1106/glcs/issues/12)
 - Fix regression where some application fork a child where the actual opengl rendering happens
   (https://github.com/lano1106/glcs/issues/11)
+- Fix a linkage issue with pthreads on some platforms.
 
 Version 0.6.2 - May 08, 2014
 
